Get user's permission before executing scripts or desktop files

This commit makes KIO show a dialog box asking the user what to do
(either open it using a text editor or execute it) when he clicks
on a script or a desktop file.

REVIEW: 120666
BUG: 275405